@startuml

title __TEMPTESTACTIVITY's Class Diagram__\n

  namespace neet.com.knowweather {
    namespace TempTestActivity {
      class neet.com.knowweather.TempTestActivity.ChatActivity {
          - etContent : EditText
          - iv : ImageView
          - recyclerView : RecyclerView
          # onCreate()
      }
    }
  }
  

  namespace neet.com.knowweather {
    namespace TempTestActivity {
      class neet.com.knowweather.TempTestActivity.LocationActivity {
          + mLocationClient : LocationClient
          - btn1 : Button
          # onCreate()
      }
    }
  }
  

  neet.com.knowweather.TempTestActivity.ChatActivity -up-|> android.support.v7.app.AppCompatActivity
  neet.com.knowweather.TempTestActivity.ChatActivity o-- neet.com.knowweather.Adapter.ChatAdapter : chatAdapter
  neet.com.knowweather.TempTestActivity.LocationActivity -up-|> android.support.v7.app.AppCompatActivity
  neet.com.knowweather.TempTestActivity.LocationActivity o-- neet.com.knowweather.tool.MyLocationListener : myListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
